online-editor/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: portal-sk-ru-online-editor-svc
  namespace: online-platform
spec:
  type: ClusterIP
  ports:
  - name: db
    port: 3306
    protocol: TCP
    targetPort: 3306
  - name: owncloud
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: onlyoffice
    port: 80
    protocol: TCP
    targetPort: 80
  - name: onlyoffice-sec
    port: 443
    protocol: TCP
    targetPort: 443
  - name: redis
    port: 6379
    protocol: TCP
    targetPort: 6379
  - name: metrics
    port: 9121
    protocol: TCP
    targetPort: 9121
  selector:
    app: portal-sk-ru-online-editor
